--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,22 +2,22 @@
     /**
    * colors
    */
-    --violet-blue-crayola: hsla(234, 50%, 64%, 1);
+    --violet-blue-crayola: rgb(65, 72, 135);
     --dark-cornflower-blue_a7: hsla(214, 88%, 27%, 0.07);
     --white: hsla(0, 0%, 100%, 1);
     --white_a3: hsla(0, 0%, 100%, 0.03);
     --white_a8: hsla(0, 0%, 100%, 0.08);
     --white_a12: hsla(0, 0%, 100%, 0.12);
     --white_a70: hsla(0, 0%, 100%, 0.7);
-    --cultured: hsla(220, 20%, 97%, 1);
+    --cultured: hsla(230, 20%, 97%, 1);
     --lavender-web: hsla(233, 52%, 94%, 1);
-    --cadet-blue-crayola: hsla(220, 12%, 70%, 1);
+    --cadet-blue-crayola: hsla(230, 12%, 230%, 1);
     --cadet-blue-crayola_a20: hsla(222, 23%, 71%, 0.2);
     --charcoal: hsla(218, 22%, 26%, 1);
     --raisin-black: hsla(216, 14%, 14%, 1);
     --light-gray: hsla(0, 0%, 79%, 1);
-    --blue-crayola: hsla(219, 72%, 56%, 1);
-    --black-coral: hsla(220, 12%, 43%, 1);
+    --blue-crayola: rgb(24, 44, 82);
+    --black-coral: hsla(230, 12%, 43%, 1);
     /**
    * typography
    */
@@ -145,7 +145,7 @@ body.nav-active {
 }
 
 ::-webkit-scrollbar-thumb:hover {
-    background-color: hsl(0, 0%, 70%);
+    background-color: darkgray;
 }
 
 
@@ -174,6 +174,7 @@ body.nav-active {
 
 .section {
     padding-block: var(--section-padding);
+    margin-bottom: 50px;
 }
 
 .has-bg-image {
@@ -305,6 +306,11 @@ body.nav-active {
     gap: 16px;
 }
 
+.logo-dark,
+.logo-light {
+    letter-spacing: 2.5px;
+}
+
 .header.active .logo-light,
 .header .logo-dark {
     display: none;
@@ -414,8 +420,24 @@ body.nav-active {
     padding-block-start: calc(var(--section-padding) + 70px);
     text-align: center;
     background-blend-mode: darken;
-    height: 85vh;
+    height: 99vh;
     background-color: rgba(0, 0, 0, 0.5);
+}
+
+.hero-content {
+    -webkit-animation: Slide-in 1.2s forwards;
+    animation: Slide-in 1.2s forwards;
+}
+
+@keyframes Slide-in {
+    from {
+        margin-top: 140px;
+        opacity: 0;
+    }
+    to {
+        margin-top: 75px;
+        opacity: 1;
+    }
 }
 
 .hero .container {
@@ -424,6 +446,7 @@ body.nav-active {
 }
 
 .hero-title {
+    margin-top: 75px;
     color: var(--white);
 }
 
@@ -661,93 +684,17 @@ body.nav-active {
 }
 
 
-/*-----------------------------------*\
-  #CTA
-\*-----------------------------------*/
-
-.cta {
-    background-color: var(--charcoal);
-}
-
-.cta .container {
-    padding-block: 100px 60px;
-    border-block-end: 1px solid var(--cadet-blue-crayola_a20);
-}
-
-.cta .section-title {
-    color: var(--white);
-    margin-block-end: 30px;
-}
-
-.cta .btn {
-    background-color: var(--violet-blue-crayola);
-    color: var(--white);
-    border: none;
-}
-
-
-/*-----------------------------------*\
-  #FOOTER
+/*----------------------------------*\
+    #FOOTER
 \*-----------------------------------*/
 
 .footer {
+    width: 100%;
+    text-align: center;
+    padding-top: 20px;
+    height: 70px;
+    color: rgb(230, 230, 230);
     background-color: var(--charcoal);
-    padding-block: 60px 100px;
-    color: var(--light-gray);
-}
-
-.footer-brand .footer-text {
-    margin-block: 20px;
-}
-
-.footer .social-list {
-    color: var(--white);
-}
-
-.footer-list-title {
-    color: var(--white);
-    margin-block-end: 16px;
-}
-
-.footer-link {
-    padding-block: 4px;
-    transition: var(--transition-1);
-}
-
-.footer-link:is(:hover, :focus-visible) {
-    color: var(--violet-blue-crayola);
-}
-
-.input-wrapper {
-    position: relative;
-    margin-block-start: 25px;
-}
-
-.input-field {
-    background-color: var(--white_a3);
-    color: var(--light-gray);
-    font-size: var(--fs-7);
-    padding: 12px 16px;
-    border: 1px solid var(--dark-cornflower-blue_a7);
-    border-radius: var(--radius-6);
-    box-shadow: var(--shadow-3);
-    outline: none;
-}
-
-.input-field::placeholder {
-    color: inherit;
-}
-
-.submit-btn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    border-radius: 0 var(--radius-6) var(--radius-6) 0;
-    background-color: var(--violet-blue-crayola);
-    color: var(--white);
-    padding-inline: 24px;
-    font-weight: var(--fw-700);
 }
 
 
@@ -984,7 +931,7 @@ body.nav-active {
    * STATS
    */
     .stats .container {
-        max-width: 70%;
+        max-width: 230%;
     }
     .stats-card {
         padding: 60px;
